[project]
name = "source-workshop"
version = "0.1.0"
description = "Source code for workshop 19 september 2025 about RAG"
authors = [
    {name = "elfaria-wistoria",email = "edwinsyah23032003@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "openai (>=1.107.0,<2.0.0)",
    "reportlab (>=4.4.3,<5.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
